feat: Implement CEO dashboard API for combined Amazon and Bonsai metrics, supported by new GA4 historical backfill and Amazon economic data ingestion scripts, with updated environment configuration.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ SP_API_REGION=us-east-1
 GOOGLE_CLOUD_PROJECT=
 BIGQUERY_DATASET=amazon_econ
 GCS_BUCKET=
+GA4_DATASET=
+GA4_PROPERTY_ID=
+SALES_DATASET=sales
+AMAZON_ECON_DATASET=amazon_econ
+WHOLESALE_DATASET=wholesale
