feat: Initialize Convex.js with a schema for inventory parts and generated API files.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
     "xlsx": "^0.18.5"
+  },
+  "scripts": {
+    "convex:mcp": "npx convex mcp start"
+  },
+  "devDependencies": {
+    "convex": "^1.31.7"
   }
 }
