feat: Implement comprehensive inventory management with QuickBooks Web Connector (QBWC) synchronization, Convex backend, and a new dashboard UI.

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,30 @@ GA4_PROPERTY_ID=
 SALES_DATASET=sales
 AMAZON_ECON_DATASET=amazon_econ
 WHOLESALE_DATASET=wholesale
+
+# QBWC / QuickBooks Desktop middleware
+QBWC_USERNAME=
+QBWC_PASSWORD=
+QBWC_APP_URL=
+QBWC_APP_NAME=190 Group QB Sync
+QBWC_APP_DESCRIPTION=Sync inventory events from Convex into QuickBooks Desktop Enterprise.
+QBWC_APP_SUPPORT_URL=
+QBWC_OWNER_ID={57F3B9B1-86F1-4fcc-B1EE-566DE1813D20}
+QBWC_FILE_ID=
+QBWC_RUN_EVERY_N_MINUTES=15
+QBWC_IS_READ_ONLY=false
+QBWC_QWC_OUTPUT=.tmp/qb_inventory_sync.qwc
+QB_COMPANY_FILE=
+QBXML_VERSION=13.0
+QB_ADJUSTMENT_ACCOUNT_DEFAULT=Inventory Adjustments
+QBWC_SERVER_VERSION=190Group-QBWC-0.1.0
+QBWC_MIN_CLIENT_VERSION=
+QBWC_BIND_HOST=0.0.0.0
+QBWC_BIND_PORT=8085
+CONVEX_ENV_FILE=
+
+# Inventory API security / approval controls (Batch 4)
+INVENTORY_WRITE_TOKEN=
+INVENTORY_ADMIN_TOKEN=
+INVENTORY_REQUIRE_APPROVAL=false
+INVENTORY_APPROVAL_QTY_THRESHOLD=25
