feat: Implement QuickBooks Web Connector (QBWC) synchronization service for inventory management with Convex integration and deployment tooling.

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ WHOLESALE_DATASET=wholesale
 QBWC_USERNAME=
 QBWC_PASSWORD=
 QBWC_APP_URL=
+QBWC_CERT_URL=
 QBWC_APP_NAME=190 Group QB Sync
 QBWC_APP_DESCRIPTION=Sync inventory events from Convex into QuickBooks Desktop Enterprise.
 QBWC_APP_SUPPORT_URL=
@@ -34,6 +35,7 @@ QBWC_MIN_CLIENT_VERSION=
 QBWC_BIND_HOST=0.0.0.0
 QBWC_BIND_PORT=8085
 CONVEX_ENV_FILE=
+CONVEX_RUN_PROD=false
 
 # Inventory API security / approval controls (Batch 4)
 INVENTORY_WRITE_TOKEN=
