feat: Implement QuickBooks synchronization service with QBXML processing, Convex queue integration, and inventory cleanup scripts.

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,15 @@ QBWC_QWC_OUTPUT=.tmp/qb_inventory_sync.qwc
 QB_COMPANY_FILE=
 QBXML_VERSION=13.0
 QB_ADJUSTMENT_ACCOUNT_DEFAULT=Inventory Adjustments
+QB_ITEMS_SOURCE=csv
+QB_ITEMS_CSV=.tmp/qb_items_export.csv
+QB_ITEMS_REFRESH_MINUTES=60
+QB_ITEMS_QUERY_MAX_RETURNED=1000
+QB_ITEMS_QUERY_MODE=auto
+QB_ITEMS_AUTO_CREATE=true
+QB_ITEM_INCOME_ACCOUNT_DEFAULT=
+QB_ITEM_COGS_ACCOUNT_DEFAULT=
+QB_ITEM_ASSET_ACCOUNT_DEFAULT=
 QBWC_SERVER_VERSION=190Group-QBWC-0.1.0
 QBWC_MIN_CLIENT_VERSION=
 QBWC_BIND_HOST=0.0.0.0
